<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>tech.pinto</groupId>
    <artifactId>pinto</artifactId>
    <version>0.0.1-SNAPSHOT</version>
  </parent>
  <artifactId>pinto-lang</artifactId>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.build.timestamp.format>yyMMdd_HHmm</maven.build.timestamp.format>
    <buildNumber>${maven.build.timestamp}</buildNumber>
  </properties>
  <scm>
    <connection>scm:svn:http://none</connection>
    <!--<developerconnection>scm:svn:https://none</developerconnection>
                                                                                                    -->
    <url>scm:svn:https://none</url>
  </scm>

  <build>
    <resources>
 <resource>
   <directory>src/main/resources</directory>
   <filtering>true</filtering>
 </resource>
</resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
                				<dependencies>
  <dependency>
    <groupId>com.google.dagger</groupId>
    <artifactId>dagger-compiler</artifactId>
    <version>2.12</version>
  </dependency>
				</dependencies>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <forceJavacCompilerUse>true</forceJavacCompilerUse>
        </configuration>

      </plugin>
              <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
                <includes>
                    <include>**/AllTests.java</include>
                </includes>
            </configuration>
        </plugin>
        <plugin>
              <groupId>org.codehaus.mojo</groupId>
              <artifactId>exec-maven-plugin</artifactId>
              <version>1.2.1</version>
              <executions>
                <execution>
                    <id>REPL</id>
                    <goals><goal>java</goal></goals>
                    <configuration>
                        <mainClass>tech.pinto.Main</mainClass>
                        <systemProperties>
                            <systemProperty>
                                <key>pinto.port</key>
                                <value>5556</value>
                            </systemProperty>
                        </systemProperties>
                    </configuration>
                </execution>
                <execution>
                    <id>demo</id>
                    <goals><goal>java</goal></goals>
                    <configuration>
                        <mainClass>tech.pinto.Demo</mainClass>
                        <systemProperties>
                            <systemProperty>
                                <key>pinto.port</key>
                                <value>5559</value>
                            </systemProperty>
                        </systemProperties>
                    </configuration>
                </execution>
            </executions>
            </plugin>
            <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
 				<version>3.0.1</version>
 				<configuration>
   					<encoding>UTF-8</encoding>
   					    <nonFilteredFileExtensions>
            				<nonFilteredFileExtension>js</nonFilteredFileExtension>
            				<nonFilteredFileExtension>css</nonFilteredFileExtension></nonFilteredFileExtensions>
 				</configuration>
		</plugin>
    </plugins>
  </build>
  <dependencies>
  	<dependency>
	<groupId>org.eclipse.jetty</groupId>
	<artifactId>jetty-server</artifactId>
	<version>9.3.0.M2</version>
</dependency>
	<dependency>
	<groupId>org.eclipse.jetty</groupId>
	<artifactId>jetty-servlet</artifactId>
	<version>9.3.0.M2</version>
</dependency>
	<dependency>
	<groupId>org.eclipse.jetty</groupId>
	<artifactId>jetty-webapp</artifactId>
	<version>9.3.0.M2</version>
</dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>23.2-jre</version>
    </dependency>
    <dependency>
      <groupId>jline</groupId>
      <artifactId>jline</artifactId>
      <version>2.12</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
    </dependency>
    <dependency>
      <groupId>com.jakewharton.fliptables</groupId>
      <artifactId>fliptables</artifactId>
      <version>1.0.2</version>
    </dependency>

  <dependency>
    <groupId>com.google.dagger</groupId>
    <artifactId>dagger</artifactId>
    <version>2.12</version>
  </dependency>
  <dependency>
    <groupId>com.google.dagger</groupId>
    <artifactId>dagger-compiler</artifactId>
    <version>2.12</version>
    <optional>true</optional>
  </dependency>
<dependency>
    <groupId>com.google.code.gson</groupId>
    <artifactId>gson</artifactId>
    <version>2.7</version>
</dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.21</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.1.2</version>
        </dependency>
  </dependencies>
</project>
